--- a/calculator.html
+++ b/calculator.html
@@ -17,10 +17,10 @@
                 </div>
                 <ul class="navbar__menu">
                     <li class="navbar__item">
-                        <a href="/calculator.html" class="navbar__class"> Normal Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/calculator.html" class="navbar__class"> Normal Calculator (2 Numbers) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/inverseCalculator.html" class="navbar__class"> Inverse Opperations Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/inverseCalculator.html" class="navbar__class"> Inverse Opperations Calculator (2 Numbers) </a>
                     </li>
                 </ul>
             </div>
