--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <a href="/calculator-website/calculator.html" class="navbar__class"> Normal Calculator (2 Numbers) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/calculator-website/inverseCalculator.html" class="navbar__class"> Inverse Opperations Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/inverseCalculator.html" class="navbar__class"> Algebraic Calculator (2 Numbers) </a>
                     </li>
                 </ul>
             </div>
