--- a/inverseCalculator.html
+++ b/inverseCalculator.html
@@ -4,12 +4,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
         <link rel="stylesheet" href="style.css" />
-        <script src="inverse.js"></script>
+        <script src="algebra.js"></script>
     </head>
     <body>
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="" id="navbar__logo">Calculator - Inverse Opperations Calculator</a>
+                <a href="" id="navbar__logo">Calculator - Algebraic Calculator</a>
                 <div class="navbar__toggle menu" id="mobile">
                     <span class="bar"></span>
                     <span class="bar"></span>
