--- a/algebraCalculator.html
+++ b/algebraCalculator.html
@@ -40,7 +40,8 @@
         <label id="Display"></label></label>
 
         <label id="Answer"></label>
-
-        <button onclick="calculate2()">Calculate</button>
+        <footer>
+             <button onclick="calculate2()">Calculate</button>
+        </footer>
     </body>
 </html>
