--- a/calculator.html
+++ b/calculator.html
@@ -39,6 +39,8 @@
 
         <label id="Answer"></label>
 
-        <button onclick="calculate()">Calculate</button>
+        <footer>
+             <button onclick="calculate()">Calculate</button>
+        </footer>
     </body>
 </html>
