--- a/algebraCalculator.html
+++ b/algebraCalculator.html
@@ -17,13 +17,13 @@
                 </div>
                 <ul class="navbar__menu">
                     <li class="navbar__item">
-                        <a href="/calculator.html" class="navbar__class"> Normal Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/calculator.html" class="navbar__class"> Normal Calculator (2 Numbers) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/algebraCalculator.html" class="navbar__class"> Algebraic Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/algebraCalculator.html" class="navbar__class"> Algebraic Calculator (2 Numbers) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/proportionsCalculator.html" class="navbar__class"> Proportions Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/proportionsCalculator.html" class="navbar__class"> Proportions Calculator (2 Numbers) </a>
                     </li>
                 </ul>
             </div>
