--- a/algebraCalculator.html
+++ b/algebraCalculator.html
@@ -31,7 +31,7 @@
         <label for="fname">Number 1 : </label>
         <input type="number" id="Number1"><br>
 
-        <label for="fname">Number 2 : </label>
+        <label for="fname">Answer : </label>
         <input type="number" id="Number2"><br>
 
         <label for="fname">Type : </label>
