--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
                 </ul>
             </div>
         </nav>
+
+        <label id="Key">Key (Type) : 1 = "Addition", 2 = "Subtraction", 3 = "Multiplication", 4 = "Division"</label>
+        
     </body>
 </html>
