--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                     <li class="navbar__item">
                         <a href="/calculator-website/proportionsCalculator.html" class="navbar__class"> Proportions Calculator (2 Numbers) </a>
                     </li>
+                    <li class="navbar__item">
+                        <a href="/calculator-website/fractionsCalculator.html" class="navbar__class"> Fractions Calculator (2 Fractions) </a>
+                    </li>
                 </ul>
             </div>
         </nav>
