--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="/calculator-website/algebraCalculator.html" class="navbar__class"> Algebraic Calculator (2 Numbers) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/calculator-website/proportionsCalculator.html" class="navbar__class"> Proportions Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/proportionsCalculator.html" class="navbar__class"> Proportions Calculator (2 Fractions) </a>
                     </li>
                     <li class="navbar__item">
                         <a href="/calculator-website/fractionsCalculator.html" class="navbar__class"> Fractions Calculator (2 Fractions) </a>
