--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </ul>
             </div>
         </nav>
-
-        <label id="Key">Key (Type) : 1 = "Addition", 2 = "Subtraction", 3 = "Multiplication", 4 = "Division"</label>
-        
+        <footer>
+            <label id="Key">Key (Type) : 1 = "Addition", 2 = "Subtraction", 3 = "Multiplication", 4 = "Division"</label>
+        </footer>        
     </body>
 </html>
