--- a/fractionsCalculator.html
+++ b/fractionsCalculator.html
@@ -31,16 +31,16 @@
                 </ul>
             </div>
         </nav>
-        <label for="fname">Number 1 : </label>
+        <label for="fname">Numerator 1 : </label>
         <input type="number" id="Number1"><br>
 
-        <label for="fname">Number 2 : </label>
+        <label for="fname">Denominator 1 : </label>
         <input type="number" id="Number2"><br>
 
-        <label for="fname">Number 3 : </label>
+        <label for="fname">Numerator 2 : </label>
         <input type="number" id="Number3"><br>
 
-        <label for="fname">Number 4 : </label>
+        <label for="fname">Denominator 2 : </label>
         <input type="number" id="Number4"><br>
 
         <label for="fname">Type : </label>
