--- a/fractionsCalculator.html
+++ b/fractionsCalculator.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="" id="navbar__logo">Calculator - Proportions Calculator</a>
+                <a href="" id="navbar__logo">Calculator - Fractions Calculator</a>
                 <div class="navbar__toggle menu" id="mobile">
                     <span class="bar"></span>
                     <span class="bar"></span>
