--- a/squareCalculator.html
+++ b/squareCalculator.html
@@ -28,18 +28,15 @@
                     <li class="navbar__item">
                         <a href="/calculator-website/fractionsCalculator.html" class="navbar__class"> Fractions Calculator (2 Fractions) </a>
                     </li>
+                    <li class="navbar__item">
+                        <a href="/calculator-website/squareCalculator.html" class="navbar__class"> Square Root Calculator (1 Number) </a>
+                    </li>
                 </ul>
             </div>
         </nav>
 
         <label for="fname">Number 1 : </label>
         <input type="number" id="Number1"><br>
-
-        <label for="fname">Number 2 : </label>
-        <input type="number" id="Number2"><br>
-
-        <label for="fname">Type : </label>
-        <input type="number" id="Type"><br>
 
         <label id="Display"></label></label>
 
