--- a/squareCalculator.html
+++ b/squareCalculator.html
@@ -43,7 +43,7 @@
         <label id="Answer"></label>
 
         <footer>
-            <button onclick="calculate()">Calculate</button>
+            <button onclick="calculate5()">Calculate</button>
         </footer>
     </body>
 </html>
