--- a/algebraCalculator.html
+++ b/algebraCalculator.html
@@ -28,6 +28,9 @@
                     <li class="navbar__item">
                         <a href="/calculator-website/fractionsCalculator.html" class="navbar__class"> Fractions Calculator (2 Fractions) </a>
                     </li>
+                    <li class="navbar__item">
+                        <a href="/calculator-website/squareCalculator.html" class="navbar__class"> Square Root Calculator (1 Number) </a>
+                    </li>
                 </ul>
             </div>
         </nav>
