--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
                 </div>
                 <ul class="navbar__menu">
                     <li class="navbar__item">
-                        <a href="/calculator.html" class="navbar__class"> Normal Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/calculator.html" class="navbar__class"> Normal Calculator (2 Numbers) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/algebraCalculator.html" class="navbar__class"> Algebraic Calculator (2 Numbers) </a>
+                        <a href="/calculator-website/algebraCalculator.html" class="navbar__class"> Algebraic Calculator (2 Numbers) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/proportionsCalculator.html" class="navbar__class"> Proportions Calculator (2 Fractions) </a>
+                        <a href="/calculator-website/proportionsCalculator.html" class="navbar__class"> Proportions Calculator (2 Fractions) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/fractionsCalculator.html" class="navbar__class"> Fractions Calculator (2 Fractions) </a>
+                        <a href="/calculator-website/fractionsCalculator.html" class="navbar__class"> Fractions Calculator (2 Fractions) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/squareCalculator.html" class="navbar__class"> Square Calculator (1 Number) </a>
+                        <a href="/calculator-website/squareCalculator.html" class="navbar__class"> Square Calculator (1 Number) </a>
                     </li>
                     <li class="navbar__item">
-                        <a href="/averageCalculator.html" class="navbar__class"> Average Calculator (2-5 Numbers) </a>
+                        <a href="/calculator-website/averageCalculator.html" class="navbar__class"> Average Calculator (2-5 Numbers) </a>
                     </li>
                 </ul>
             </div>
