--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
 
         <footer>
-            <label>Key : 1 = "Addition", 2 = "Subtraction", 3 = "Multiplication", 4 = "Division"</label>
+            <label>Key (Type) : 1 = "Addition", 2 = "Subtraction", 3 = "Multiplication", 4 = "Division"</label>
         </footer>
 
     </body>
