--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <nav class="navbar">
             <div class="navbar__container">
-                <a id="navbar__logo">Calculator - A Simple Calculator Website</a>
+                <a id="navbar__logo">Simple Calculator - Index</a>
                 <div class="navbar__toggle menu" id="mobile">
                     <span class="bar"></span>
                     <span class="bar"></span>
