--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <li class="navbar__item">
                         <a href="/calculator-website/averageCalculator.html" class="navbar__class"> Average Calculator (2-5 Numbers) </a>
                     </li>
+                    <li class="navbar__item">
+                        <a href="/calculator-website/exponentCalculator.html" class="navbar__class"> Exponent Calculator (1 Number) </a>
+                    </li>
                 </ul>
             </div>
         </nav>
