--- a/exponentCalculator.html
+++ b/exponentCalculator.html
@@ -21,7 +21,7 @@
         <label for="fname">Number 1 : </label>
         <input type="number" id="Number1"><br>
 
-        <label for="fname">Number 2 : </label>
+        <label for="fname">Exponent : </label>
         <input type="number" id="Number2"><br>
 
         <label id="Display"></label></label>
