--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <li class="navbar__item">
                         <a href="/calculator-website/exponentCalculator.html" class="navbar__class"> Exponent Calculator (1 Number) </a>
                     </li>
+                    <li class="navbar__item">
+                        <a href="/calculator-website/exponentCalculator.html" class="navbar__class"> Circumference Calculator (1 Number) </a>
+                    </li>
                 </ul>
             </div>
         </nav>
