--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <li class="navbar__item">
                         <a href="/calculator-website/circumferenceCalculator.html" class="navbar__class"> Circumference Calculator (1 Number) </a>
                     </li>
+                    <li class="navbar__item">
+                        <a href="/calculator-website/percentageCalculator.html" class="navbar__class"> Percentage Calculator (1 Number / 1 Fraction) </a>
+                    </li>
                 </ul>
             </div>
         </nav>
