--- a/algebraCalculator.html
+++ b/algebraCalculator.html
@@ -34,7 +34,14 @@
         <label id="Answer"></label>
 
         <footer>
-            <button onclick="calculate2()">Calculate</button>
+            <label>Key (Type) : 1 = "Addition", 2 = "Subtraction", 3 = "Multiplication", 4 = "Division"</label>
+            <footer>
+                <footer>
+                    <label id="Display"></label></label>
+                    <label id="Answer"></label>
+                </footer>
+                <button onclick="calculate2()">Calculate</button>
+            </footer>
         </footer>
     </body>
 </html>
