--- a/fractionsCalculator.html
+++ b/fractionsCalculator.html
@@ -32,12 +32,15 @@
         <label for="fname">Type : </label>
         <input type="number" id="Type"><br>
 
-        <label id="Display"></label></label>
-
-        <label id="Answer"></label>
-
         <footer>
-            <button onclick="calculate4()">Calculate</button>
+            <label>Key (Type) : 1 = "Addition", 2 = "Subtraction", 3 = "Multiplication", 4 = "Division"</label>
+            <footer>
+                <footer>
+                    <label id="Display"></label></label>
+                    <label id="Answer"></label>
+                </footer>
+                <button onclick="calculate4()">Calculate</button>
+            </footer>
         </footer>
     </body>
 </html>
