--- a/calculator.html
+++ b/calculator.html
@@ -34,7 +34,7 @@
                     <label id="Display"></label></label>
                     <label id="Answer"></label>
                 </footer>
-                <button onclick="calculate2()">Calculate</button>
+                <button onclick="calculate()">Calculate</button>
             </footer>
         </footer>
     </body>
