--- a/calculator.html
+++ b/calculator.html
@@ -24,7 +24,7 @@
         <label for="fname">Number 2 : </label>
         <input type="number" id="Number2"><br>
 
-        <label for="fname">Type : </label>
+        <label for="fname">Type (1-4) : </label>
         <input type="number" id="Type"><br>
 
         <footer>
