--- a/algebraCalculator.html
+++ b/algebraCalculator.html
@@ -23,10 +23,10 @@
         <label for="fname">Number 2 : </label>
         <input type="number" id="Number2"><br>
 
-        <label for="fname">Type : </label>
+        <label for="fname">Type (1-4) : </label>
         <input type="number" id="Type"><br>
 
-        <label for="fname">Variable Location : </label>
+        <label for="fname">Variable Location (1-2) : </label>
         <input type="number" id="Variable"><br>
 
         <footer>
