--- a/fractionsCalculator.html
+++ b/fractionsCalculator.html
@@ -29,7 +29,7 @@
         <label for="fname">Number 4 : </label>
         <input type="number" id="Number4"><br>
 
-        <label for="fname">Type : </label>
+        <label for="fname">Type (1-4) : </label>
         <input type="number" id="Type"><br>
 
         <footer>
