--- a/proportionsCalculator.html
+++ b/proportionsCalculator.html
@@ -29,7 +29,7 @@
         <label for="fname">Number 4 : </label>
         <input type="number" id="Number4"><br>
 
-        <label for="fname">Variable Location : </label>
+        <label for="fname">Variable Location (1-4) : </label>
         <input type="number" id="Variable"><br>
 
         <label id="Display"></label></label>
